--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,7 @@
     <color name="ratingHigh">#02AA1F</color>
     <color name="ratingMedium">#FF7A00</color>
     <color name="ratingLow">#DF2800</color>
+    <color name="ratingUnknown">#B7B7B7</color>
 
     <color name="bottom_nav_icon_color">@color/bottom_nav_colors</color>
     <color name="bottom_nav_text_color">@color/bottom_nav_colors</color>
